--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,15 @@
 @media screen and (max-width:2600px) {
+    .tit {
+        margin-bottom: 200px;
+    }
+
+    .first{
+        margin: 50px 0 200px 0;
+    }
+
+    .past {
+        color: #666;
+    }
 
     img {
         margin-top: 20px;
@@ -47,12 +58,24 @@
     }
 
     p {
-        font-size: 14px;
+        font-size: 16px;
         font-family: 'Noto Serif KR', serif;
+        margin-bottom: 70px;
     }
 }
 
 @media screen and (max-width:1920px) {
+    .tit {
+        margin-bottom: 200px;
+    }
+
+    .first{
+        margin: 50px 0 200px 0;
+    }
+
+    .past {
+        color: #666;
+    }
 
     img {
         margin-top: 20px;
@@ -103,10 +126,22 @@
     p {
         font-size: 16px;
         font-family: 'Noto Serif KR', serif;
+        margin-bottom: 70px;
     }
 }
 
 @media screen and (max-width:1640px) {
+    .tit {
+        margin-bottom: 200px;
+    }
+
+    .first{
+        margin: 50px 0 200px 0;
+    }
+
+    .past {
+        color: #666;
+    }
 
     img {
         margin-top: 20px;
@@ -156,10 +191,23 @@
     p {
         font-size: 16px;
         font-family: 'Noto Serif KR', serif;
+        margin-bottom: 70px;
     }
 }
 
 @media screen and (max-width:1280px) {
+    .tit {
+        margin-bottom: 200px;
+    }
+
+    .first{
+        margin: 50px 0 200px 0;
+    }
+
+    .past {
+        color: #666;
+    }
+
     img {
         margin-top: 20px;
         width: 62.5000vw;
@@ -208,10 +256,23 @@
     p {
         font-size: 16px;
         font-family: 'Noto Serif KR', serif;
+        margin-bottom: 70px;
     }
 }
 
 @media screen and (max-width:1160px) {
+    .tit {
+        margin-bottom: 200px;
+    }
+
+    .first{
+        margin: 50px 0 200px 0;
+    }
+
+    .past {
+        color: #666;
+    }
+
     img {
         margin-top: 20px;
         width: 68.9655vw;
@@ -260,10 +321,23 @@
     p {
         font-size: 16px;
         font-family: 'Noto Serif KR', serif;
+        margin-bottom: 70px;
     }
 }
 
 @media screen and (max-width:992px) {
+    .tit {
+        margin-bottom: 200px;
+    }
+
+    .first{
+        margin: 50px 0 200px 0;
+    }
+
+    .past {
+        color: #666;
+    }
+
     img {
         margin-top: 20px;
         width: 80.6452vw;
@@ -312,10 +386,23 @@
     p {
         font-size: 16px;
         font-family: 'Noto Serif KR', serif;
+        margin-bottom: 70px;
     }
 }
 
 @media screen and (max-width:768px) {
+    .tit {
+        margin-bottom: 200px;
+    }
+
+    .first{
+        margin: 50px 0 200px 0;
+    }
+
+    .past {
+        color: #666;
+    }
+
     img {
         margin-top: 20px;
         width: 104.1667vw;
@@ -364,10 +451,23 @@
     p {
         font-size: 16px;
         font-family: 'Noto Serif KR', serif;
+        margin-bottom: 70px;
     }
 }
 
 @media screen and (max-width:576px) {
+    .tit {
+        margin-bottom: 200px;
+    }
+
+    .first{
+        margin: 50px 0 200px 0;
+    }
+
+    .past {
+        color: #666;
+    }
+
     img {
         margin-top: 20px;
         width: 138.8889vw;
@@ -416,10 +516,23 @@
     p {
         font-size: 16px;
         font-family: 'Noto Serif KR', serif;
+        margin-bottom: 70px;
     }
 }
 
 @media screen and (max-width:400px) {
+    .tit {
+        margin-bottom: 200px;
+    }
+
+    .first{
+        margin: 50px 0 200px 0;
+    }
+
+    .past {
+        color: #666;
+    }
+    
     img {
         margin-top: 20px;
         width: 200.0000vw;
@@ -468,5 +581,6 @@
     p {
         font-size: 16px;
         font-family: 'Noto Serif KR', serif;
+        margin-bottom: 70px;
     }
 }
